appId: com.beememorybank.mobile
---
- runFlow: _go_home.yaml
- tapOn:
    text: "Open navigation drawer"
- extendedWaitUntil:
    visible:
      text: "Security"
    timeout: 3000
- tapOn:
    text: "Security"
- extendedWaitUntil:
    visible:
      text: "Security"
    timeout: 10000
- assertVisible:
    text: "Security"
- takeScreenshot: security_page
